tests/ui/issues/issue-6596-2.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `$`
  --> $DIR/issue-6596-2.rs:3:16
   |
LL | / macro_rules! g {
LL | |     ($inp:ident) => (
LL | |         { $inp $nonexistent }
   | |                ^^^^^^^^^^^^ expected one of 8 possible tokens
LL | |
LL | |     );
LL | | }
   | |_- in this expansion of `g!`
...
LL |       g!(foo);
   |       ------- in this macro invocation

error: aborting due to previous error

